# subtitle-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  LICENSE  PROTECTION_TEST.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  architecture.md  conventions.md
docs/design-docs/: adk-integration.md  core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md  template.md
docs/product-specs/: autonomous-agent.md  index.md  new-user-onboarding.md
docs/references/: design-system-reference-llms.txt  nixpacks-llms.txt  uv-llms.txt
docs/task-history/8cc3a3b2-fa49-4eb5-a3a0-88da77b06415/: implementation_plan.md  task.md  walkthrough.md
scripts/: lint_architecture.py  lint_docs.py
src/: main.py
src/agent/: prompt_logic.py  tools.py
src/cli/: AGENTS.md  subdl_cli.py  tmdb_cli.py
src/core/: discovery.py  security.py
src/subtitle_agent/: main.py  mcp_client.py  tools.py
src/subtitle_agent/cli/: subdl_cli.py  tmdb_cli.py
tests/: e2e_connectivity.py  test_main.py  test_mcp_client.py  test_tools.py
tests/agent/: test_prompt_logic.py  test_tools.py
tests/core/: test_discovery.py  test_security.py
