[project]
name = "subtitle-agent"
version = "0.1.0"
description = "An automated agent powered by Gemini and OpenSubtitles to find and organize subtitles"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.27.0",
    "httpx>=0.28.1",
    "patool>=4.0.4",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportMissingTypeArgument = "none"
reportDeprecated = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
